# llm-engine

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  providers.yml  pyproject.toml
docs/: API.md  DEVELOPMENT.md  PUBLISHING.md  QUICK_START.md
llm_engine/: __init__.py  config.py  config_loader.py  engine.py  exceptions.py  factory.py
llm_engine/caching/: __init__.py  backends.py  cache.py  middleware.py  semantic.py
llm_engine/concurrent/: __init__.py  runner.py
llm_engine/middleware/: __init__.py  base.py  builtin.py  chain.py
llm_engine/observability/: __init__.py  cost_tracking.py  metrics.py  middleware.py
llm_engine/performance/: __init__.py  connection_pool.py  middleware.py  rate_limiting.py
llm_engine/providers/: __init__.py  base.py  litellm_helpers.py  openai_compatible.py
scripts/: check_code_quality.sh
tests/: __init__.py  conftest.py  test.ipynb
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_integration_engine.py  test_integration_providers.py
tests/unit/: __init__.py  test_caching.py  test_concurrent_runner.py  test_config.py  test_config_loader.py  test_engine.py  test_exceptions.py  test_factory.py  test_middleware.py  test_observability.py  test_performance.py  test_providers_base.py  test_providers_openai_compatible.py
